# raygame

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Makefile_windows  README.md  m  main.c  obj.c  raygame  rayit_defense
.cache/clangd/index/: main.c.C6B1ED1C387E9C06.idx
OLD/: CMakeLists.txt
assets/images/: soldier.xcf
include/: enemy.h  game.h  player.h  utils.h
socket/srv/: server  server.c  server2  server3  server3.c  server4  server4.c  server5.c  srv5
src/: enemy.c  game.c  main.c  player.c  utils.c
